<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movie"
        android:icon="@drawable/ic_movies"
        android:title="@string/movie" />

    <item
        android:id="@+id/tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tvShow" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>